--- a/smkn2.css
+++ b/smkn2.css
@@ -1,12 +1,12 @@
 body, html {
     width: 100%;
-    height: 100%;
-    overflow: hidden;
-    padding: 0;
+    height: 100vh;
     margin: 0;
+    padding: 0;
+    overflow: hidden;
     background-image: url(bg\ smk2.png);
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size: contain;
     background-attachment: fixed;
 }
 
@@ -50,8 +50,9 @@ nav {
     gap: 50px;
     row-gap: 10px;
     padding-top: 70px;
-    margin-left: 135px;
-    justify-content: start;
+    margin: 0 auto;
+    justify-content: center;
+    transform: translateX(-10px);
 }
 
 .subheader {
@@ -112,20 +113,24 @@ nav {
 
 footer {
     background-color: #ffffff;
-    top: 22.8%;
     width: 100%;
-    height: 0px;
-    position: relative;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
 }
 
 .foottext {
-    padding-top: 100px;
+    position: relative;
+    top: -7px;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 
 .text {
     font-size: 12px;
