--- a/smkn2.css
+++ b/smkn2.css
@@ -1,12 +1,12 @@
 body, html {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     background-image: url(bg\ smk2.png);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-attachment: fixed;
 }
 
@@ -125,8 +125,8 @@ footer {
 }
 
 .foottext {
-    position: relative;
-    top: -7px;
+    margin: 0;
+    line-height: 35px;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
 }
