--- a/smkn2.css
+++ b/smkn2.css
@@ -15,7 +15,7 @@ body, html {
 }
 
 nav {
-    z-index: 0;
+    z-index: 5;
     position: sticky;
     top: 0;
     width: 100%;
@@ -67,6 +67,7 @@ nav {
     border-radius: 10px;
     margin: 0 auto;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .subheader > a {
@@ -77,6 +78,11 @@ nav {
     text-decoration: none;
     margin-top: 20px;
     margin-left: 20px;
+    display: block;  
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 1px 1px;
 }
 
 .subheader:hover > a {
@@ -203,57 +209,64 @@ footer {
     margin: 0;
 }
 
-/* ===== MEDIA QUERY MOBILE ===== */
-@media (max-width: 768px) {
-    .header {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 200px);
-        gap: 20px;
-        row-gap: 20px;
-        padding-top: 80px;
-        margin: 0 10px;
+@media screen and (max-width: 768px) {
+      nav {
         justify-content: center;
+        padding-left: 0;
+    }
+
+    .navtext {
+        font-size: 14px;
+        margin: auto;
+        text-align: left;
+    }
+    
+    .imglogo {
+        margin: 0 auto;
+    }
+
+    /* Subheader diubah menjadi 1 kolom */
+    .header {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(8, 200px);
+        gap: 20px;
+        padding-top: 20px;
+        margin-left: 0;
+        justify-items: center;
         transform: translateX(0);
     }
 
     .subheader {
-        width: 100%;
-        max-width: 250px;
-        height: 160px;
-        font-size: 18px;
+        width: 350px;
     }
 
     .subheader > a {
-        font-size: 16px;
-        margin-top: 15px;
-        margin-left: 15px;
-    }
-
-    .home, .portal, .elearning, .bkk, .e-pkl, .e-presensi, .e-library, .cbt {
-        width: 60px;
-        height: 60px;
-        bottom: auto;
-        left: auto;
-        margin-top: 10px;
-    }
-
-    nav {
-        height: 60px;
-        padding-left: 10px;
-    }
-
-    .navtext {
-        font-size: 18px;
         margin-left: 20px;
-        margin-top: 10px;
+        margin-top: 20px;
+        padding: 10px 10px;
     }
+
+    .home { bottom: 94px; left: 190px; width: 100px; height: 100px;}
+    .portal { bottom: 122px; left: 190px; width: 100px; height: 100px;}
+    .elearning { bottom: 112px; left: 190px; width: 100px; height: 100px;}
+    .bkk { bottom: 95px; left: 190px; width: 100px; height: 100px; }
+    .e-pkl { bottom: 86px; left: 190px; width: 100px; height: 100px; }
+    .e-presensi { bottom: 71px; left: 190px; width: 100px; height: 100px;}
+    .e-library { bottom: 90px; left: 190px; width: 100px; height: 100px; }
+    .cbt { bottom: 109px; left: 190px; width: 100px; height: 100px;}
 
     footer {
-        height: 35px;
+        height: 50px;
+        transition: transform 0.3s ease;
+    }
+
+    footer.hide {
+        transform: translateY(100%);
     }
 
     .foottext {
         line-height: 35px;
-        font-size: 14px;
+        font-size: 10px;
     }
 }
