--- a/smkn2.css
+++ b/smkn2.css
@@ -257,8 +257,20 @@ footer {
     .cbt { bottom: 109px; left: 190px; width: 100px; height: 100px;}
 
     footer {
-        height: 50px;
-        transition: transform 0.3s ease;
+        width: 100%;
+        background-color: #ffffff;
+        height: 40px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 12px;
+        font-family: Arial, Helvetica, sans-serif;
+        box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
+        z-index: 100;
+        transition: transform 0.3s ease-in-out;
     }
 
     footer.hide {
