--- a/smkn2.css
+++ b/smkn2.css
@@ -118,7 +118,7 @@ nav {
 }
 
 footer {
-    background-color: #ffffff;
+    background-color: transparent;
     width: 100%;
     height: 50px;
     position: fixed;
@@ -225,7 +225,6 @@ footer {
         margin: 0 auto;
     }
 
-    /* Subheader diubah menjadi 1 kolom */
     .header {
         display: grid;
         grid-template-columns: 1fr;
