--- a/smkn2.css
+++ b/smkn2.css
@@ -118,12 +118,12 @@ nav {
 }
 
 footer {
-     position: fixed;
-    bottom: 0;
-    left: 0;
+    background-color: #ffffff;
     width: 100%;
     height: 50px;
-    background-color: #ffffff;
+    position: fixed;
+    bottom: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -259,29 +259,27 @@ footer {
     .e-library { bottom: 90px; left: 190px; width: 100px; height: 100px;}
     .cbt { bottom: 109px; left: 190px; width: 100px; height: 100px;}
 
-    footer {
+    footer:not(.mobile) { display: none; }
+
+    footer.mobile {
+        display: flex;
         width: 100%;
-        background-color: #ffffff;
         height: 40px;
+        background-color: #ffffff;
         position: fixed;
         bottom: 0;
         left: 0;
-        display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 12px;
-        font-family: Arial, Helvetica, sans-serif;
+        font-size: 10px;
         box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
         z-index: 100;
         transition: transform 0.3s ease-in-out;
     }
 
-    footer.hide {
+    footer.mobile.hide {
         transform: translateY(100%);
     }
 
-    .foottext {
-        line-height: 35px;
-        font-size: 10px;
-    }
+    .foottext { font-size: 10px; line-height: 35px; }
 }
