--- a/smkn2.css
+++ b/smkn2.css
@@ -130,7 +130,7 @@ footer {
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
-    transition: transform 0.3s ease-in-out;
+    /* transition: transform 0.3s ease-in-out; */
     z-index: 100;
 }
 
@@ -274,7 +274,7 @@ footer {
         font-size: 10px;
         box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
         z-index: 100;
-        transition: transform 0.3s ease-in-out;
+        /* transition: transform 0.3s ease-in-out; */
     }
 
     /* footer.mobile.hide {
