--- a/smkn2.css
+++ b/smkn2.css
@@ -7,7 +7,7 @@ body, html {
     background-image: url(bg\ smk2.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
 }
 
 :root {
